--- a/index.html
+++ b/index.html
@@ -1,9 +1,51 @@
 <!DOCTYPE html>
 <html lang="pt-R">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FCE Serralheria | A serralheria que transforma seus sonhos em realidade</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>FCE Serralheria | A serralheria que transforma seus sonhos em realidade</title>
+   
+
+
+  <!-- Meta descrição -->
+
+  <meta name="description" content="Projetos de serralheria sob medida com acabamento de alto padrão. Estruturas metálicas, portões, escadas, corrimãos e muito mais. Qualidade, confiança e sofisticação.">
+
+
+  <!-- Palavras-chave -->
+
+  <meta name="keywords" content="serralheria, serralheria de luxo, estruturas metálicas, portão sob medida, escadas metálicas, corrimão de aço, serralheria personalizada, projetos em ferro, serralheiro mais proximo, serralheria em belo horizonte">
+
+
+  <!-- Autor -->
+
+  <meta name="author" content="FC Serralheria Deluxe">
+
+
+  <!-- Robots (indexação e seguimento de links) -->
+
+  <meta name="robots" content="index, follow">
+
+
+  <!-- Open Graph para redes sociais (Facebook, WhatsApp etc.) -->
+
+  <meta property="og:title" content="Serralheria de Alto Padrão | FC Serralheria Deluxe">
+
+  <meta property="og:description" content="Especialistas em serralheria de luxo. Portões, escadas, estruturas metálicas e muito mais, com acabamento impecável. Solicite um orçamento!">
+
+  <meta property="og:image" content="https://fceserralheria-deluxe.vercel.app/assets/serralheiro-hero.webp"> <!-- substitua pela URL real da imagem principal -->
+
+  <meta property="og:url" content="https://fceserralheria-deluxe.vercel.app/">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Serralheria de Alto Padrão | FC Serralheria Deluxe">
+  <meta name="twitter:description" content="Projetos em ferro e aço com acabamento de alto padrão. Peças sob medida com qualidade e sofisticação.">
+  <meta name="twitter:image" content="https://fceserralheria-deluxe.vercel.app/assets/serralheiro-hero.webp"> <!-- substitua pela URL real da imagem principal -->
+
+
+
     <link rel="stylesheet" href="./styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,6 +66,7 @@
     
         <div class="menu">
           <a href="#sobre">Sobre</a>
+
           <a href="#services">Serviços</a>
           <a href="#fotos">Fotos</a>
           <a href="#contato">Contato</a>
