--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt-R">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FCE Serralheria | A serralheria que transforma seus sonhos em realidade</title>
+  <title>FCE Serralheria | A serralheria que transforma seu projeto em realidade</title>
    
-  <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
+  
 
   <!-- Meta descrição -->
 
@@ -45,18 +45,20 @@
   <meta name="twitter:image" content="https://fceserralheria-deluxe.vercel.app/assets/serralheiro-hero.webp"> <!-- substitua pela URL real da imagem principal -->
 
 
-
+  <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="./styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
+
+
 </head>
 <body>
     <header>
       <nav>
-        <div class="logo">
+        <a href="#" class="logo">
           <img src="./assets/fce-logo-2.svg" alt="Logo da FCE Serralheria">
-        </div>
+        </a>
     
         <button class="hamburger" aria-label="Abrir Menu">
           <span></span>
